--- a/ocm-system/kustomization.yaml
+++ b/ocm-system/kustomization.yaml
@@ -3,7 +3,9 @@ kind: Kustomization
 
 resources:
 - https://github.com/open-component-model/ocm-controller/config/default?ref=v0.5.0
-- https://github.com/open-component-model/unpacker-controller/config/default?ref=v0.0.1
+- https://github.com/open-component-model/unpacker-controller/config/crd?ref=v0.0.1
+- unpacker
+- https://github.com/open-component-model/unpacker-controller/config/manager?ref=v0.0.1
 
 images:
 - name: open-component-model/ocm-controller
