--- a/flux/kustomization.yaml
+++ b/flux/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- Namespace.yaml
-- GitRepository.yaml
-- FluxKustomization.yaml
+- 1_namespace.yaml
+- 2_gitrepository.yaml
+- 3_fluxkustomization.yaml
+
+namespace: flux-co-demo
