--- a/ocm-system/kustomization.yaml
+++ b/ocm-system/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- 1_secret_regcreds-sops.yaml
+- 2_secret_creds-sops.yaml
 - https://github.com/open-component-model/ocm-controller/config/default?ref=v0.5.0
 - https://github.com/open-component-model/unpacker-controller/config/crd?ref=v0.0.1
 - unpacker
