--- a/btp-co-demo/kustomization.yaml
+++ b/btp-co-demo/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - 1_namespace.yaml
-- 2_secrets-sops.yaml
+- 2_secrets_btp-sops.yaml
+- 2_secret_creds-sops.yaml
