--- a/mpas/ocm-system/kustomization.yaml
+++ b/mpas/ocm-system/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- 1_namespace.yaml
+# - 1_namespace.yaml #ns is defined in ocm-controller
 - 2_secret_creds-sops.yaml
 - 3_secret_regcreds-sops.yaml
 - https://github.com/open-component-model/ocm-controller/config/default?ref=v0.5.0
