--- a/mpas/ocm-system/kustomization.yaml
+++ b/mpas/ocm-system/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 - 2_secret_creds-sops.yaml
 - 3_secret_regcreds-sops.yaml
 - https://github.com/open-component-model/ocm-controller/config/default?ref=v0.5.0
-- https://github.com/open-component-model/unpacker-controller/config/crd
+- git::https://github.com/open-component-model/unpacker-controller/config/crd
 #- unpacker
 #- https://github.com/open-component-model/unpacker-controller/config/manager?ref=v0.0.1
 
