--- a/mpas/mpas-system/kustomization.yaml
+++ b/mpas/mpas-system/kustomization.yaml
@@ -1,8 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
 - 1_namespace.yaml
 - 2_gitrepository.yaml
 - 3_fluxkustomization.yaml
+- 4_provider-github.yaml
+- 5_alert-github.yaml
 
 namespace: mpas-system
