--- a/mpas/ocm-system/kustomization.yaml
+++ b/mpas/ocm-system/kustomization.yaml
@@ -6,10 +6,7 @@ resources:
 - 2_secret_creds-sops.yaml
 - 3_secret_regcreds-sops.yaml
 - https://github.com/open-component-model/ocm-controller/config/default?ref=v0.5.0
-- https://github.com/open-component-model/unpacker-controller/config/default?ref=v0.0.2
-#- https://github.com/open-component-model/unpacker-controller/config/crd?ref=v0.0.1
-#- unpacker
-#- https://github.com/open-component-model/unpacker-controller/config/manager?ref=v0.0.1
+- 4_unpacker.yaml
 
 images:
 - name: open-component-model/ocm-controller
